test/SILGen/Inputs/RetroactiveB.swift
@@ -1,2 +1,3 @@
 public struct X { }
 public struct Y { }
+public struct AnotherExternalGeneric<Argument> {}
